Avoid ofVirtual(), clean up